codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ DeepSeekX (v0.131.0-alpha.12)                                 │
│                                                                   │
│ Visit https://api-docs.deepseek.com for up-to-date                │
│ information on DeepSeek API rate limits                           │
│                                                                   │
│  Model:            gpt-5.1-codex-max                              │
│  Model provider:   DeepSeek                                       │
│  Directory: [[workspace]]                                         │
│  Permissions:      Workspace (on-request)                         │
│  Agents.md:        <none>                                         │
│                                                                   │
│  Token usage:      1.9K total  (1K input + 900 output)            │
│  Context window:   100% left (2.25K used / 272K)                  │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14) │
│  Weekly limit:     [███████████░░░░░░░░░] 55% left (resets 03:24) │
╰───────────────────────────────────────────────────────────────────╯
