codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_uses_default_reasoning_when_config_empty.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ DeepSeekX (v0.131.0-alpha.12)                                     │
│                                                                       │
│ Visit https://api-docs.deepseek.com for up-to-date                    │
│ information on DeepSeek API rate limits                               │
│                                                                       │
│  Model:            gpt-5.1-codex-max                                  │
│  Model provider:   DeepSeek                                           │
│  Directory: [[workspace]]                                             │
│  Permissions:      Custom (workspace with network access, on-request) │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      750 total  (500 input + 250 output)                │
│  Context window:   100% left (750 used / 272K)                        │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
